// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden recipes — snapshot regression > banana-classic: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 48.0646,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 39.0967,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 23.53,
    "fat_g": 5.28,
    "fiber_g": 1.05,
    "kcal": 151.51,
    "protein_g": 3.13,
    "salt_g": 0.09,
    "saturated_fat_g": null,
    "sugars_g": 20.48,
  },
  "pac": 25.173,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 2.76,
    "fat_percent": 5.279,
    "fiber_percent": 1.05,
    "fructose_percent": 1.2,
    "glucose_percent": 1.25,
    "lactose_percent": 4.174,
    "polyol_percent": 0,
    "protein_percent": 3.129,
    "salt_percent": 0.088,
    "solids_percent": 32.98,
    "sucrose_percent": 11.1,
    "water_percent": 67.02,
  },
  "pod": 16.8112,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 86.33,
    "technical": 92.08,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > chocolate-classic: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 37.6492,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "pod",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "npac",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "ice_fraction",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "fat",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "aerating_protein",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "total_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "water",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 48.9639,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 25.47,
    "fat_g": 7.7,
    "fiber_g": 2.45,
    "kcal": 193.75,
    "protein_g": 4.62,
    "salt_g": 0.11,
    "saturated_fat_g": null,
    "sugars_g": 24.13,
  },
  "pac": 27.411,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.68,
    "fat_percent": 7.704,
    "fiber_percent": 2.45,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 4.719,
    "polyol_percent": 0,
    "protein_percent": 4.6155,
    "salt_percent": 0.105,
    "solids_percent": 41.509,
    "sucrose_percent": 15.7,
    "water_percent": 58.491,
  },
  "pod": 19.1782,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 77.4,
    "technical": 69.75,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > high-fruit-water: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 53.9978,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "risky",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "risky",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 33.4758,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 23.93,
    "fat_g": 0.25,
    "fiber_g": 5.92,
    "kcal": 94.27,
    "protein_g": 1.02,
    "salt_g": 0,
    "saturated_fat_g": null,
    "sugars_g": 17.92,
  },
  "pac": 24.598,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.68,
    "fat_percent": 0.255,
    "fiber_percent": 5.925,
    "fructose_percent": 2.04,
    "glucose_percent": 1.7,
    "lactose_percent": 0,
    "polyol_percent": 0,
    "protein_percent": 1.02,
    "salt_percent": 0,
    "solids_percent": 26.52,
    "sucrose_percent": 10.5,
    "water_percent": 73.48,
  },
  "pod": 18.0104,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 70.7,
    "technical": 52.99,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > jim-beam-alcohol: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 15.469,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "risky",
      "temperature_fallback": false,
    },
  ],
  "npac": 69.9768,
  "nutrition": {
    "alcohol_g": 2.8,
    "carbohydrate_g": 21.26,
    "fat_g": 6.68,
    "fiber_g": 0.4,
    "kcal": 178.45,
    "protein_g": 3.49,
    "salt_g": 0.11,
    "saturated_fat_g": null,
    "sugars_g": 20.86,
  },
  "pac": 23.347,
  "percentages": {
    "alcohol_percent": 2.8,
    "dextrose_percent": 2.76,
    "fat_percent": 6.678,
    "fiber_percent": 0.4,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 5.103,
    "polyol_percent": 0,
    "protein_percent": 3.491,
    "salt_percent": 0.108,
    "solids_percent": 32.4205,
    "sucrose_percent": 13,
    "water_percent": 64.7795,
  },
  "pod": 15.8589,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 69.21,
    "technical": 59.18,
  },
  "total_batch_g": 1000,
  "warnings": [
    "alcohol_above_safe_range",
  ],
}
`;

exports[`golden recipes — snapshot regression > milk-base-classic: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 49.7274,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "pod",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "npac",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "ice_fraction",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "fat",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "aerating_protein",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "water",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 37.5215,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 21.6,
    "fat_g": 6.92,
    "fiber_g": 0.4,
    "kcal": 163.33,
    "protein_g": 3.72,
    "salt_g": 0.11,
    "saturated_fat_g": null,
    "sugars_g": 21.2,
  },
  "pac": 23.683,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 2.76,
    "fat_percent": 6.923,
    "fiber_percent": 0.4,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 5.439,
    "polyol_percent": 0,
    "protein_percent": 3.722,
    "salt_percent": 0.115,
    "solids_percent": 33.2955,
    "sucrose_percent": 13,
    "water_percent": 66.7045,
  },
  "pod": 15.9126,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 88.33,
    "technical": 97.08,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > over-sugared-rescue: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 0,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "npac",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "ice_fraction",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "fat",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "aerating_protein",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "protein_in_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "total_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "water",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": false,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 95.9445,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 37.21,
    "fat_g": 5.53,
    "fiber_g": 0.32,
    "kcal": 210.17,
    "protein_g": 2.95,
    "salt_g": 0.09,
    "saturated_fat_g": null,
    "sugars_g": 36.89,
  },
  "pac": 50.2444,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 14.8387,
    "fat_percent": 5.5266,
    "fiber_percent": 0.3226,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 4.3089,
    "polyol_percent": 0,
    "protein_percent": 2.9484,
    "salt_percent": 0.0911,
    "solids_percent": 46.5206,
    "sucrose_percent": 17.7419,
    "water_percent": 53.4794,
  },
  "pod": 29.412,
  "scores": {
    "cost": 100,
    "flavor": 70,
    "overall": 60.69,
    "technical": 30.69,
  },
  "total_batch_g": 1240,
  "warnings": [
    "batch_mass_mismatch",
  ],
}
`;

exports[`golden recipes — snapshot regression > pistachio-high-fat: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 37.0838,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "too_sweet",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "too_soft",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "risky",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 49.4996,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 25.62,
    "fat_g": 12.85,
    "fiber_g": 1.9,
    "kcal": 238.3,
    "protein_g": 6.41,
    "salt_g": 0.1,
    "saturated_fat_g": null,
    "sugars_g": 22.32,
  },
  "pac": 25.116,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.22,
    "fat_percent": 12.847,
    "fiber_percent": 1.9,
    "fructose_percent": 0,
    "glucose_percent": 0,
    "lactose_percent": 4.948,
    "polyol_percent": 0,
    "protein_percent": 6.41,
    "salt_percent": 0.104,
    "solids_percent": 46.802,
    "sucrose_percent": 14.05,
    "water_percent": 53.198,
  },
  "pod": 17.2245,
  "scores": {
    "cost": 100,
    "flavor": 97.5,
    "overall": 65.45,
    "technical": 35.45,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;

exports[`golden recipes — snapshot regression > raspberry-premium: result snapshot is stable 1`] = `
{
  "config_version": "0.6.0",
  "cost_complete": true,
  "engine_version": "0.4.0",
  "ice_fraction": 50.5216,
  "indicators": [
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "pod",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "npac",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "ice_fraction",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "lactose_sandiness_risk",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "fat",
      "status": "needs_correction",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "aerating_protein",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "protein_in_solids",
      "status": "ideal",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "total_solids",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "water",
      "status": "good",
      "temperature_fallback": false,
    },
    {
      "band_status": "seeded",
      "category_fallback": true,
      "key": "alcohol",
      "status": "good",
      "temperature_fallback": false,
    },
  ],
  "npac": 36.769,
  "nutrition": {
    "alcohol_g": 0,
    "carbohydrate_g": 22.62,
    "fat_g": 4.27,
    "fiber_g": 2.67,
    "kcal": 138.61,
    "protein_g": 3.25,
    "salt_g": 0.09,
    "saturated_fat_g": null,
    "sugars_g": 19.91,
  },
  "pac": 24.196,
  "percentages": {
    "alcohol_percent": 0,
    "dextrose_percent": 3.22,
    "fat_percent": 4.267,
    "fiber_percent": 2.675,
    "fructose_percent": 0.84,
    "glucose_percent": 0.7,
    "lactose_percent": 4.152,
    "polyol_percent": 0,
    "protein_percent": 3.25,
    "salt_percent": 0.086,
    "solids_percent": 31.458,
    "sucrose_percent": 11,
    "water_percent": 68.542,
  },
  "pod": 16.0183,
  "scores": {
    "cost": 100,
    "flavor": 100,
    "overall": 95.37,
    "technical": 88.44,
  },
  "total_batch_g": 1000,
  "warnings": [],
}
`;
